# LifeSimulator

./: CMakeLists.txt
include/: Particle.h
src/: main.cpp
